@@ -6,7 +6,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: textIndex.test,v 1.15 2005/02/14 23:03:26 vincentdarley Exp $
+# RCS: @(#) $Id: textIndex.test,v 1.16 2005/05/13 13:46:13 vincentdarley Exp $
 
 package require tcltest 2.1
 eval tcltest::configure $argv
@@ -885,6 +885,17 @@ test textIndex-22.12 {text index wordstart, unicode} {
 test textIndex-22.13 {text index wordstart, unicode} {
     text_test_word wordstart "\uc700\uc700 abc" 8
 } 3
+
+test textIndex-23.1 {text index wordstart, unicode} {
+    pack [text .t2]
+    .t2 insert end " Text"
+    set res 2.0
+    for {set i 0} {$i < 2} {incr i} {
+	lappend res [::tk::TextPrevPara .t2 [lindex $res end]]
+    }
+    destroy .t2
+    set res
+} {2.0 1.1 1.1}
 
 
 # cleanup
